--- a/App/Donate/donate.html
+++ b/App/Donate/donate.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Home - Simple Tab Manager</title>
+  <title>Donate - Simple Tab Manager</title>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.indigo-pink.min.css">
@@ -27,7 +27,6 @@
 
   <link rel="icon" type="image/png" href="../../Resources/iconBlue.png" sizes="16x16">
 
-
 </head>
 
 <body>
@@ -35,7 +34,7 @@
 <div class="navbar navbar-default navbar-fixed-top">
   <div class="container">
     <div class="navbar-header">
-      <a class="navbar-brand">Simple Tab Manager </a>
+      <a class="navbar-brand">Simple Tab Manager</a>
     </div>
     <div class="navbar-collapse collapse" id="navbar-main">
       <ul class="nav navbar-nav navbar-right">
@@ -50,21 +49,18 @@
 
   <section class="col-sm-3 col-md-2 col-lg-2 text-left " id="left-content">
     <ul class="nav nav-pills nav-stacked">
-      <li class="active"><a href="home.html">Inicio</a></li>
+      <li class=""><a href="../Home/home.html">Inicio</a></li>
       <li class=""><a href="../Settings/settings.html">Configuración</a></li>
       <li class="disabled"><a href="#">Servicios</a></li>
       <li class="disabled"><a href="#">Usuario</a></li>
-      <li class=""><a href="../Donate/donate.html">Donate</a></li>
+      <li class="active"><a href="donate.html">Donate</a></li>
     </ul>
   </section>
 
   <section class="col-sm-9 col-md-10 col-lg-10" id="right-content">
     <div class="jumbotron text-left">
 
-      <h2 style="margin-top: -15px">Sessión guardada actualmente: </h2>
-      <h4>
-        <small class="text-info"> La ultima sessión que guardaste contiene estas pestañas: </small>
-      </h4>
+      <h2 style="margin-top: -15px"></h2>
 
 
     </div>
