--- a/App/Settings/settings.html
+++ b/App/Settings/settings.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Settings</title>
-    <link rel="stylesheet" type="text/css" href="Style/style.css">
+    <title>Settings - Simple Tab Manager</title>
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.indigo-pink.min.css">
     <script defer src="https://code.getmdl.io/1.2.1/material.min.js"></script>
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue_grey-red.min.css"/>
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
 
     <meta name="viewport" charset="UTF-8">
 
@@ -25,7 +23,10 @@
 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="../../style/simplex.bootstrap.min.css">
-    <script src="settings.controller.js"></script>
+    <script src="settings.js"></script>
+    <script src="../../Background/managerSettings.js"></script>
+
+    <link rel="icon" type="image/png" href="../../Resources/iconBlue.png" sizes="16x16">
 
 </head>
 
@@ -34,7 +35,7 @@
 <div class="navbar navbar-default navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
-            <a class="navbar-brand">Tab Saver</a>
+            <a class="navbar-brand">Simple Tab Manager</a>
         </div>
         <div class="navbar-collapse collapse" id="navbar-main">
             <ul class="nav navbar-nav navbar-right">
@@ -50,10 +51,10 @@
     <section class="col-sm-3 col-md-2 col-lg-2 text-left " id="left-content">
         <ul class="nav nav-pills nav-stacked">
             <li class=""><a href="../Home/home.html">Inicio</a></li>
-            <li class="active"><a href="/settings.html">Configuración</a></li>
+            <li class="active"><a href="settings.html">Configuración</a></li>
             <li class="disabled"><a href="#">Servicios</a></li>
             <li class="disabled"><a href="#">Usuario</a></li>
-            <li class="disabled"><a href="#">PayPal</a></li>
+            <li class=""><a href="../Donate/donate.html">Donate</a></li>
         </ul>
     </section>
 
@@ -62,17 +63,17 @@
 
             <h2 style="margin-top: -15px"> Modo de trabajo:</h2>
             <h4>
-                <small class="text-info"> Elige de que forma trabajar que le resulte mas comoda.</small>
+                <small class="text-info"> Elige la forma de trabajar que le resulte más comoda.</small>
             </h4>
             <ul class="nav nav-stacked">
                 <li>
                     <div class="container">
                         <div class="row">
                             <div class="col-sm-12">
-                                <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-1">
-                                    <input type="radio" id="option-1" class="mdl-radio__button" name="options" value="1" checked>
-                                    <span class="mdl-radio__label"><b>Simple</b>
-                                        <small class="text-muted"> - Guarda y recupera las pestañas al hacer click.</small>
+                                <label class="" for="optionSimple">
+                                    <input type="radio" id="optionSimple" class="" name="options" value="1">
+                                    <span class=""><b>Simple</b>
+                                        <small> - Guarda y recupera las pestañas al hacer click.</small>
                                     </span>
                                 </label>
                             </div>
@@ -80,9 +81,9 @@
                         </div>
                         <div class="row">
                             <div class="col-sm-12">
-                                <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="checkbox-1">
-                                    <input type="checkbox" id="checkbox-1" class="mdl-checkbox__input" checked>
-                                    <span class="mdl-checkbox__label"><small>Guardar las pestañas en la barra de marcadores</small></span>
+                                <label style="margin-left: 23px" class="" for="checkboxSimple">
+                                    <input type="checkbox" id="checkboxSimple" class="">
+                                    <span class=""><small id="checkboxSimpleText">Guardar las pestañas en la barra de marcadores</small></span>
                                 </label>
                             </div>
                         </div>
@@ -93,10 +94,10 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-sm-12">
-                                <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-2">
-                                    <input type="radio" id="option-2" class="mdl-radio__button" name="options" value="2">
-                                    <span class="mdl-radio__label"><b>Solo guardar</b>
-                                        <small class="text-muted"> - Al hacer click se guardan las pestañas en los marcadres.</small>
+                                <label class="" for="optionOnlySave">
+                                    <input type="radio" id="optionOnlySave" class="" name="options" value="2">
+                                    <span class=""><b>Solo guardar</b>
+                                        <small class="text-muted"> - Al hacer click se guardan las pestañas en los marcadores.</small>
                                     </span>
                                 </label>
                             </div>
@@ -104,9 +105,9 @@
                         </div>
                         <div class="row">
                             <div class="col-sm-12">
-                                <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="checkbox-2">
-                                    <input type="checkbox" id="checkbox-2" class="mdl-checkbox__input">
-                                    <span class="mdl-checkbox__label"><small>Cerrar pestañas al guardar.</small></span>
+                                <label style="margin-left: 23px" class="" for="checkboxOnlySave">
+                                    <input type="checkbox" id="checkboxOnlySave" class="">
+                                    <span class=""><small>Cerrar pestañas al guardar.</small></span>
                                 </label>
                             </div>
                         </div>
@@ -120,6 +121,78 @@
 
         </div>
     </section>
+
+    <div id="demo-toast-example" class="mdl-js-snackbar mdl-snackbar" style="width: 50%; margin: 0 auto;">
+        <button class="mdl-snackbar__action" type="button"></button>
+        <b><div class="mdl-snackbar__text"></div></b>
+        <button class="mdl-snackbar__action" type="button"></button>
+    </div>
+
+    <!--http://stackoverflow.com/questions/35406831/mdl-checkbox-check-from-javascript-->
+    <!--http://stackoverflow.com/questions/31413042/toggle-material-design-lite-checkbox-->
+    <!--<section class="col-sm-9 col-md-10 col-lg-10" id="right-content">-->
+        <!--<div class="jumbotron text-left">-->
+
+            <!--<h2 style="margin-top: -15px"> Modo de trabajo:</h2>-->
+            <!--<h4>-->
+                <!--<small class="text-info"> Elige de que forma trabajar que le resulte mas comoda.</small>-->
+            <!--</h4>-->
+            <!--<ul class="nav nav-stacked">-->
+                <!--<li>-->
+                    <!--<div class="container">-->
+                        <!--<div class="row">-->
+                            <!--<div class="col-sm-12">-->
+                                <!--<label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="optionSimple">-->
+                                    <!--<input type="radio" id="optionSimple" class="mdl-radio__button" name="options" value="1">-->
+                                    <!--<span class="mdl-radio__label"><b>Simple</b>-->
+                                        <!--<small> - Guarda y recupera las pestañas al hacer click.</small>-->
+                                    <!--</span>-->
+                                <!--</label>-->
+                            <!--</div>-->
+
+                        <!--</div>-->
+                        <!--<div class="row">-->
+                            <!--<div class="col-sm-12">-->
+                                <!--<label style="margin-left: 23px" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="checkboxSimple">-->
+                                    <!--<input type="checkbox" id="checkboxSimple" class="mdl-checkbox__input">-->
+                                    <!--<span class="mdl-checkbox__label"><small id="checkboxSimpleText">Guardar las pestañas en la barra de marcadores</small></span>-->
+                                <!--</label>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</li>-->
+                <!--<br>-->
+                <!--<li>-->
+                    <!--<div class="container">-->
+                        <!--<div class="row">-->
+                            <!--<div class="col-sm-12">-->
+                                <!--<label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="optionOnlySave">-->
+                                    <!--<input type="radio" id="optionOnlySave" class="mdl-radio__button" name="options" value="2">-->
+                                    <!--<span class="mdl-radio__label"><b>Solo guardar</b>-->
+                                        <!--<small class="text-muted"> - Al hacer click se guardan las pestañas en los marcadores.</small>-->
+                                    <!--</span>-->
+                                <!--</label>-->
+                            <!--</div>-->
+
+                        <!--</div>-->
+                        <!--<div class="row">-->
+                            <!--<div class="col-sm-12">-->
+                                <!--<label style="margin-left: 23px" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="checkboxOnlySave">-->
+                                    <!--<input type="checkbox" id="checkboxOnlySave" class="mdl-checkbox__input">-->
+                                    <!--<span class="mdl-checkbox__label"><small>Cerrar pestañas al guardar.</small></span>-->
+                                <!--</label>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</li>-->
+
+            <!--</ul>-->
+            <!--<h4>-->
+                <!--<small  class="text-danger"> Recuerda que siempre puedes cambiar el modo de forma rapida haciendo click con el boton derecho.</small>-->
+            <!--</h4>-->
+
+        <!--</div>-->
+    <!--</section>-->
 
 </main>
 
