--- a/App/Home/home.html
+++ b/App/Home/home.html
@@ -1,74 +1,106 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Home - Simple Tab Manager</title>
+    <title>Home - Simple Tab Manager</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="icon" type="image/png" href="../../Resources/Icons/iconBlue.png" sizes="16x16">
 
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.indigo-pink.min.css">
-  <script defer src="https://code.getmdl.io/1.2.1/material.min.js"></script>
-  <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue_grey-red.min.css"/>
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
+    <!--MDL-->
+    <link rel="stylesheet" href="../../Style/Material/material.min.css">
+    <script src="../../Style/Material/material.min.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue_grey-red.min.css"/>
 
-  <meta name="viewport" charset="UTF-8">
+    <!--JQUERY-->
+    <script src="../../Resources/js/jquery-3.2.1.min.js"></script>
+    <script src="../../Resources/js/tether.min.js"></script>
 
-  <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
-          integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
-          crossorigin="anonymous"></script>
+    <!--BOOTSTRAP-->
+    <link href="../../Style/Bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../../Style/Bootstrap/simplex.bootstrap.min.css">
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"
-          integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
-          crossorigin="anonymous"></script>
+    <!--Custom Style-->
+    <link rel="stylesheet" href="style.css">
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!--Google Analytics-->
+    <script src="../../Resources/js/analytics.js"></script>
 
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="../../style/simplex.bootstrap.min.css">
+    <!--Shortcuts-->
+    <script src="../../Resources/js/shortcuts.js"></script>
 
-  <link rel="icon" type="image/png" href="../../Resources/iconBlue.png" sizes="16x16">
+    <!--Dragula-->
+    <script src="../../Resources/js/dragula.min.js"></script>
 
+    <!--Custom Script-->
+    <script src="home.js"></script>
 
 </head>
 
 <body>
 
 <div class="navbar navbar-default navbar-fixed-top">
-  <div class="container">
-    <div class="navbar-header">
-      <a class="navbar-brand">Simple Tab Manager </a>
-    </div>
-    <div class="navbar-collapse collapse" id="navbar-main">
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">User</a></li>
-      </ul>
+    <div class="container">
+        <div class="navbar-header">
+            <a class="navbar-brand">Simple Tab Manager </a>
+        </div>
+        <div class="navbar-collapse collapse" id="navbar-main">
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#"></a></li>
+            </ul>
 
+        </div>
     </div>
-  </div>
 </div>
 
 <main class="container">
 
-  <section class="col-sm-3 col-md-2 col-lg-2 text-left " id="left-content">
-    <ul class="nav nav-pills nav-stacked">
-      <li class="active"><a href="home.html">Inicio</a></li>
-      <li class=""><a href="../Settings/settings.html">Configuración</a></li>
-      <li class="disabled"><a href="#">Servicios</a></li>
-      <li class="disabled"><a href="#">Usuario</a></li>
-      <li class=""><a href="../Donate/donate.html">Donate</a></li>
-    </ul>
-  </section>
+    <section class="col-sm-3 col-md-2 col-lg-2 text-left " id="left-content">
+        <ul class="nav nav-pills nav-stacked">
+            <li class="active"><a href="../Home/home.html">Inicio</a></li>
+            <li class=""><a href="../Services/services.html">Servicios</a></li>
+            <li class=""><a href="../Settings/settings.html">Configuración</a></li>
+            <li class=""><a href="../User/user.html">Usuario</a></li>
+            <li class=""><a href="../Donate/donate.html">Donaciones</a></li>
+        </ul>
+    </section>
 
-  <section class="col-sm-9 col-md-10 col-lg-10" id="right-content">
-    <div class="jumbotron text-left">
+    <section class="col-sm-9 col-md-10 col-lg-10" id="right-content">
+        <div class="jumbotron text-left">
 
-      <h2 style="margin-top: -15px">Sessión guardada actualmente: </h2>
-      <h4>
-        <small class="text-info"> La ultima sessión que guardaste contiene estas pestañas: </small>
-      </h4>
+            <h2 style="margin-top: -15px">Inicio: </h2>
+            <h4>
+                <small class="text-info"> La ultima sessión que guardaste contiene estas pestañas. Aqui puedes
+                    administrarlas facilmente.
+                </small>
+            </h4>
+            <div class="row">
+                <div class="col-md-9 right">
+                    <div id="panelEsquerra">
+                        <div class="well well-lg ">
+
+                            <div class="panel panel-default">
+                                <div class="panel-heading">TO-DO Things</div>
+                                <div class="panel-body">
+                                    
+                                </div>
+                            </div>
+
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="col-md-3 left">
+                    <div class="well well-lg">
+                        Well dreta
+                    </div>
+                </div>
+            </div>
 
 
-    </div>
-  </section>
+        </div>
+    </section>
 
 </main>
 
