--- a/App/Settings/settings.html
+++ b/App/Settings/settings.html
@@ -2,31 +2,36 @@
 <html>
 <head>
     <title>Settings - Simple Tab Manager</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="icon" type="image/png" href="../../Resources/Icons/iconBlue.png" sizes="16x16">
 
+    <!--MDL-->
+    <link rel="stylesheet" href="../../Style/Material/material.min.css">
+    <script src="../../Style/Material/material.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.indigo-pink.min.css">
-    <script defer src="https://code.getmdl.io/1.2.1/material.min.js"></script>
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue_grey-red.min.css"/>
 
-    <meta name="viewport" charset="UTF-8">
+    <!--JQUERY-->
+    <script src="../../Resources/js/jquery-3.2.1.min.js"></script>
+    <script src="../../Resources/js/tether.min.js"></script>
 
-    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
-            integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
-            crossorigin="anonymous"></script>
+    <!--BOOTSTRAP-->
+    <link href="../../Style/Bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../../Style/Bootstrap/simplex.bootstrap.min.css">
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"
-            integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
-            crossorigin="anonymous"></script>
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
+    <!--Custom Style-->
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="../../style/simplex.bootstrap.min.css">
-    <script src="settings.js"></script>
-    <script src="../../Background/managerSettings.js"></script>
 
-    <link rel="icon" type="image/png" href="../../Resources/iconBlue.png" sizes="16x16">
+    <!--Google Analytics-->
+    <script src="../../Resources/js/analytics.js"></script>
+
+    <!--Shortcuts-->
+    <script src="../../Resources/js/shortcuts.js"></script>
+
+    <!--Custom Scripts-->
+    <script src="settings.js"></script>
+    <script src="../../Background/managerProvider.js"></script>
 
 </head>
 
@@ -39,9 +44,8 @@
         </div>
         <div class="navbar-collapse collapse" id="navbar-main">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">User</a></li>
+                <li><a href="#"></a></li>
             </ul>
-
         </div>
     </div>
 </div>
@@ -51,16 +55,16 @@
     <section class="col-sm-3 col-md-2 col-lg-2 text-left " id="left-content">
         <ul class="nav nav-pills nav-stacked">
             <li class=""><a href="../Home/home.html">Inicio</a></li>
+            <li class=""><a href="../Services/services.html">Servicios</a></li>
             <li class="active"><a href="settings.html">Configuración</a></li>
-            <li class="disabled"><a href="#">Servicios</a></li>
-            <li class="disabled"><a href="#">Usuario</a></li>
-            <li class=""><a href="../Donate/donate.html">Donate</a></li>
+            <li class=""><a href="../User/user.html">Usuario</a></li>
+            <li class=""><a href="../Donate/donate.html">Donaciones</a></li>
         </ul>
     </section>
 
     <section class="col-sm-9 col-md-10 col-lg-10" id="right-content">
+        <!--Modo de trabajo-->
         <div class="jumbotron text-left">
-
             <h2 style="margin-top: -15px"> Modo de trabajo:</h2>
             <h4>
                 <small class="text-info"> Elige la forma de trabajar que le resulte más comoda.</small>
@@ -72,7 +76,7 @@
                             <div class="col-sm-12">
                                 <label class="" for="optionSimple">
                                     <input type="radio" id="optionSimple" class="" name="options" value="1">
-                                    <span class=""><b>Simple</b>
+                                    <span class="" style="font-size: 15px"><b>Simple</b>
                                         <small> - Guarda y recupera las pestañas al hacer click.</small>
                                     </span>
                                 </label>
@@ -96,7 +100,7 @@
                             <div class="col-sm-12">
                                 <label class="" for="optionOnlySave">
                                     <input type="radio" id="optionOnlySave" class="" name="options" value="2">
-                                    <span class=""><b>Solo guardar</b>
+                                    <span class="" style="font-size: 15px"><b>Solo guardar</b>
                                         <small class="text-muted"> - Al hacer click se guardan las pestañas en los marcadores.</small>
                                     </span>
                                 </label>
@@ -115,84 +119,140 @@
                 </li>
 
             </ul>
-            <h4>
-                <small  class="text-danger"> Recuerda que siempre puedes cambiar el modo de forma rapida haciendo click con el boton derecho.</small>
-            </h4>
+            <!--<h4>-->
+                <!--<small class="text-danger"> Recuerda que siempre puedes cambiar el modo de forma rapida haciendo click-->
+                    <!--con el boton derecho.-->
+                <!--</small>-->
+            <!--</h4>-->
 
         </div>
+
+        <!--Atajos de teclado-->
+        <div class="jumbotron text-left">
+            <h2 style="margin-top: -15px"> Atajos de teclado:</h2>
+            <h4>
+                <small class="text-info"> Utiliza los atajos de teclado para ser más rápido trabajando.</small>
+            </h4>
+
+            <ul class="nav nav-stacked">
+                <li>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <label>
+                                    <span class="" style="font-size: 15px"><b>Externos:</b></span>
+                                </label>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <label style="margin-left: 23px" class="">
+                                    <span>Activar guardado: <span class="label label-info">Ctrl + Q</span> </span>
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <label class="">
+                                    <span class="" style="font-size: 15px"><b>Internos:</b></span>
+                                </label>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <label style="margin-left: 23px" class="">
+                                    <span>Inicio: <span class="label label-info">I</span> </span>
+                                </label>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <label style="margin-left: 23px" class="">
+                                    <span>Servicios: <span class="label label-info">S</span> </span>
+                                </label>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <label style="margin-left: 23px" class="">
+                                    <span>Configuración: <span class="label label-info">C</span> </span>
+                                </label>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <label style="margin-left: 23px" class="">
+                                    <span>Usuario: <span class="label label-info">U</span> </span>
+                                </label>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <label style="margin-left: 23px" class="">
+                                    <span>Donaciones: <span class="label label-info">D</span> </span>
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+
+                <br>
+            </ul>
+        </div>
+
+        <!--Servicios destacados-->
+        <div class="jumbotron text-left">
+            <h2 style="margin-top: -15px"> Servicios destacados:</h2>
+            <h4>
+                <small class="text-info"> Añade o elimina servicios que quieras destacar.</small>
+            </h4>
+
+            <form class="form-horizontal">
+                <fieldset>
+                    <div class="form-group">
+                        <div class="col-lg-10">
+                            <label for="inputServiceName" class="control-label">Introduce un nuevo servicio.</label>
+                        </div>
+                        <div class="col-lg-12">
+                            <input type="text" class="form-control" id="inputServiceName" placeholder="Nombre">
+                        </div>
+                        <div class="col-lg-12">
+                            <input type="text" class="form-control" id="inputUrl" placeholder="URL">
+                        </div>
+                    </div>
+                </fieldset>
+            </form>
+
+            <a class="btn btn-default" id="saveButton">Guardar</a>
+
+
+            <table class="table table-striped table-hover">
+                <thead>
+                <tr>
+                    <th>Nombre</th>
+                    <th>URL</th>
+                    <th><i class="material-icons">delete</i></th>
+                </tr>
+                </thead>
+                <tbody class="table-content-generator">
+                </tbody>
+            </table>
+
+        </div>
+
     </section>
 
     <div id="demo-toast-example" class="mdl-js-snackbar mdl-snackbar" style="width: 50%; margin: 0 auto;">
         <button class="mdl-snackbar__action" type="button"></button>
-        <b><div class="mdl-snackbar__text"></div></b>
+        <b>
+            <div class="mdl-snackbar__text"></div>
+        </b>
         <button class="mdl-snackbar__action" type="button"></button>
     </div>
-
-    <!--http://stackoverflow.com/questions/35406831/mdl-checkbox-check-from-javascript-->
-    <!--http://stackoverflow.com/questions/31413042/toggle-material-design-lite-checkbox-->
-    <!--<section class="col-sm-9 col-md-10 col-lg-10" id="right-content">-->
-        <!--<div class="jumbotron text-left">-->
-
-            <!--<h2 style="margin-top: -15px"> Modo de trabajo:</h2>-->
-            <!--<h4>-->
-                <!--<small class="text-info"> Elige de que forma trabajar que le resulte mas comoda.</small>-->
-            <!--</h4>-->
-            <!--<ul class="nav nav-stacked">-->
-                <!--<li>-->
-                    <!--<div class="container">-->
-                        <!--<div class="row">-->
-                            <!--<div class="col-sm-12">-->
-                                <!--<label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="optionSimple">-->
-                                    <!--<input type="radio" id="optionSimple" class="mdl-radio__button" name="options" value="1">-->
-                                    <!--<span class="mdl-radio__label"><b>Simple</b>-->
-                                        <!--<small> - Guarda y recupera las pestañas al hacer click.</small>-->
-                                    <!--</span>-->
-                                <!--</label>-->
-                            <!--</div>-->
-
-                        <!--</div>-->
-                        <!--<div class="row">-->
-                            <!--<div class="col-sm-12">-->
-                                <!--<label style="margin-left: 23px" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="checkboxSimple">-->
-                                    <!--<input type="checkbox" id="checkboxSimple" class="mdl-checkbox__input">-->
-                                    <!--<span class="mdl-checkbox__label"><small id="checkboxSimpleText">Guardar las pestañas en la barra de marcadores</small></span>-->
-                                <!--</label>-->
-                            <!--</div>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                <!--</li>-->
-                <!--<br>-->
-                <!--<li>-->
-                    <!--<div class="container">-->
-                        <!--<div class="row">-->
-                            <!--<div class="col-sm-12">-->
-                                <!--<label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="optionOnlySave">-->
-                                    <!--<input type="radio" id="optionOnlySave" class="mdl-radio__button" name="options" value="2">-->
-                                    <!--<span class="mdl-radio__label"><b>Solo guardar</b>-->
-                                        <!--<small class="text-muted"> - Al hacer click se guardan las pestañas en los marcadores.</small>-->
-                                    <!--</span>-->
-                                <!--</label>-->
-                            <!--</div>-->
-
-                        <!--</div>-->
-                        <!--<div class="row">-->
-                            <!--<div class="col-sm-12">-->
-                                <!--<label style="margin-left: 23px" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="checkboxOnlySave">-->
-                                    <!--<input type="checkbox" id="checkboxOnlySave" class="mdl-checkbox__input">-->
-                                    <!--<span class="mdl-checkbox__label"><small>Cerrar pestañas al guardar.</small></span>-->
-                                <!--</label>-->
-                            <!--</div>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                <!--</li>-->
-
-            <!--</ul>-->
-            <!--<h4>-->
-                <!--<small  class="text-danger"> Recuerda que siempre puedes cambiar el modo de forma rapida haciendo click con el boton derecho.</small>-->
-            <!--</h4>-->
-
-        <!--</div>-->
-    <!--</section>-->
 
 </main>
 
