--- a/App/Services/services.html
+++ b/App/Services/services.html
@@ -40,16 +40,18 @@
 
 <body>
 
-<div class="navbar navbar-default navbar-fixed-top">
+<div class="navbar navbar-default navbar-fixed-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
-      <a class="navbar-brand">Simple Tab Manager </a>
+      <a class="navbar-brand">Simple Tab Manager</a>
     </div>
     <div class="navbar-collapse collapse" id="navbar-main">
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"></a></li>
+      <ul class="nav navbar-nav navbar-left">
+        <li><a href="../Home/home.html"> </a></li>
       </ul>
-
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="../Settings/settings.html"><i class="material-icons settings-icon">settings</i></a></li>
+      </ul>
     </div>
   </div>
 </div>
@@ -60,11 +62,10 @@
     <ul class="nav nav-pills nav-stacked">
       <li class=""><a href="../Home/home.html">Inicio</a></li>
       <li class="active"><a href="../Services/services.html">Servicios</a></li>
-      <li class=""><a href="../Settings/settings.html">Configuración</a></li>
       <li class=""><a href="../User/user.html">Usuario</a></li>
-      <li class=""><a href="../Donate/donate.html">Donaciones</a></li>
     </ul>
   </section>
+
 
   <section class="col-sm-9 col-md-10 col-lg-10" id="right-content">
     <div class="jumbotron text-left">
@@ -76,7 +77,7 @@
 
       <div class="panel-generator" style="margin-top: 35px"></div>
       <div class="panel-empty text-center">
-        <i class="material-icons">wifi_tethering</i>
+        <i class="material-icons not-found-icon">wifi_tethering</i>
         <p style="font-size: 13px" class="text-danger">No se ha encontrado ningún elemento a destacar. Puedes añadir servicios a destacar desde la configuración y debes tener una sessión guardada.</p>
       </div>
 
