--- a/App/Settings/settings.html
+++ b/App/Settings/settings.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Settings - Simple Tab Manager</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8">
+    <meta name="viewport" content="width=device-width initial-scale=0.9" charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="icon" type="image/png" href="../../Resources/Icons/iconBlue.png" sizes="16x16">
 
@@ -33,18 +33,27 @@
     <script src="settings.js"></script>
     <script src="../../Background/managerProvider.js"></script>
 
+    <!--idGenerator-->
+    <script src="../../Resources/js/IdGenerator.js"></script>
+
+    <!--Lodash-->
+    <script src="../../Resources/js/lodash.js"></script>
+
 </head>
 
 <body>
 
-<div class="navbar navbar-default navbar-fixed-top">
+<div class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
         <div class="navbar-header">
             <a class="navbar-brand">Simple Tab Manager</a>
         </div>
         <div class="navbar-collapse collapse" id="navbar-main">
+            <ul class="nav navbar-nav navbar-left">
+                <li><a href="../Home/home.html"><i class="material-icons">home</i></a></li>
+            </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#"></a></li>
+                <li><a href="../Settings/settings.html"><i class="material-icons settings-icon">settings</i></a></li>
             </ul>
         </div>
     </div>
@@ -52,13 +61,10 @@
 
 <main class="container">
 
-    <section class="col-sm-3 col-md-2 col-lg-2 text-left " id="left-content">
+    <section class="col-sm-2 col-md-2 col-lg-2 text-left " id="left-content">
         <ul class="nav nav-pills nav-stacked">
-            <li class=""><a href="../Home/home.html">Inicio</a></li>
-            <li class=""><a href="../Services/services.html">Servicios</a></li>
             <li class="active"><a href="settings.html">Configuración</a></li>
-            <li class=""><a href="../User/user.html">Usuario</a></li>
-            <li class=""><a href="../Donate/donate.html">Donaciones</a></li>
+            <li class=""><a href="../Donate/donate.html">PayPal</a></li>
         </ul>
     </section>
 
@@ -120,9 +126,9 @@
 
             </ul>
             <!--<h4>-->
-                <!--<small class="text-danger"> Recuerda que siempre puedes cambiar el modo de forma rapida haciendo click-->
-                    <!--con el boton derecho.-->
-                <!--</small>-->
+            <!--<small class="text-danger"> Recuerda que siempre puedes cambiar el modo de forma rapida haciendo click-->
+            <!--con el boton derecho.-->
+            <!--</small>-->
             <!--</h4>-->
 
         </div>
