Beta 1.6.2: -Canvis de noms -Millores en els shortcuts -Provider ara genera menus -Implementat les sessions pre guardades -Canvis interns del settings (JS)

--- a/App/Donate/donate.html
+++ b/App/Donate/donate.html
@@ -16,6 +16,10 @@
     <link href="../../Style/Bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../../Style/Bootstrap/simplex.bootstrap.min.css">
 
+    <!--JQUERY-->
+    <script src="../../Resources/js/jquery-3.2.1.min.js"></script>
+    <script src="../../Resources/js/tether.min.js"></script>
+
     <!--Custom Style-->
     <link rel="stylesheet" href="style.css">
 
@@ -27,6 +31,9 @@
 
     <!--ID Generator-->
     <script src="../../Resources/js/IdGenerator.js"></script>
+
+    <!--Custom Scritp-->
+    <script src="donate.js"></script>
 
 </head>
 
@@ -42,7 +49,7 @@
                 <li><a href="../Home/home.html"><i class="material-icons">home</i></a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="../Settings/settings.html"><i class="material-icons settings-icon">settings</i></a></li>
+                <!--<li><a href="../Settings/settings.html"><i class="material-icons settings-icon">settings</i></a></li>-->
             </ul>
         </div>
     </div>
@@ -53,6 +60,7 @@
     <section class="col-sm-3 col-md-2 col-lg-2 text-left " id="left-content">
         <ul class="nav nav-pills nav-stacked">
             <li class=""><a href="../Settings/settings.html">Configuración</a></li>
+            <li class=""><a href="../Shortcuts/shortcuts.html">Atajos</a></li>
             <li class="active"><a href="../Donate/donate.html">PayPal</a></li>
         </ul>
     </section>
