--- a/App/Services/services.html
+++ b/App/Services/services.html
@@ -34,7 +34,7 @@
 
   <!--Custom Script-->
   <script src="services.js"></script>
-  <script src="../../Background/managerProvider.js"></script>
+  <script src="../../Background/Provider.js"></script>
 
 </head>
 
@@ -60,8 +60,9 @@
 
   <section class="col-sm-3 col-md-2 col-lg-2 text-left " id="left-content">
     <ul class="nav nav-pills nav-stacked">
+      <li class=""><a href="../Resume/resume.html">Resumen</a></li>
       <li class=""><a href="../Home/home.html">Inicio</a></li>
-      <li class="active"><a href="../Services/services.html">Servicios</a></li>
+      <li class="active"><a href="../Services/services.html">Destacado</a></li>
       <li class=""><a href="../User/user.html">Usuario</a></li>
     </ul>
   </section>
@@ -70,7 +71,7 @@
   <section class="col-sm-9 col-md-10 col-lg-10" id="right-content">
     <div class="jumbotron text-left">
 
-      <h2 style="margin-top: -15px">Servicios destacados: </h2>
+      <h2 style="margin-top: -15px">Destacados: </h2>
       <h4>
         <small class="text-info">En este apartado aparecerán destacados los servicios de terceros que hay en tu sessión guardada.</small>
       </h4>
