--- a/App/User/user.html
+++ b/App/User/user.html
@@ -44,7 +44,7 @@
 
     <!--Custom Script-->
     <script src="user.js"></script>
-    <script src="../../Background/managerProvider.js"></script>
+    <script src="../../Background/Provider.js"></script>
 
 </head>
 
@@ -68,8 +68,9 @@
 
     <section class="col-sm-3 col-md-2 col-lg-2 text-left " id="left-content">
         <ul class="nav nav-pills nav-stacked">
+            <li class=""><a href="../Resume/resume.html">Resumen</a></li>
             <li class=""><a href="../Home/home.html">Inicio</a></li>
-            <li class=""><a href="../Services/services.html">Servicios</a></li>
+            <li class=""><a href="../Services/services.html">Destacado</a></li>
             <li class="active"><a href="../User/user.html">Usuario</a></li>
         </ul>
     </section>
