--- a/App/Settings/settings.html
+++ b/App/Settings/settings.html
@@ -30,8 +30,10 @@
     <script src="../../Resources/js/shortcuts.js"></script>
 
     <!--Custom Scripts-->
-    <script src="settings.js"></script>
-    <script src="../../Background/managerProvider.js"></script>
+    <script src="settings-workflow.js"></script>
+    <script src="settings-services.js"></script>
+    <script src="settings-presaved.js"></script>
+    <script src="../../Background/Provider.js"></script>
 
     <!--idGenerator-->
     <script src="../../Resources/js/IdGenerator.js"></script>
@@ -64,6 +66,7 @@
     <section class="col-sm-2 col-md-2 col-lg-2 text-left " id="left-content">
         <ul class="nav nav-pills nav-stacked">
             <li class="active"><a href="settings.html">Configuración</a></li>
+            <li class=""><a href="../Shortcuts/shortcuts.html">Atajos</a></li>
             <li class=""><a href="../Donate/donate.html">PayPal</a></li>
         </ul>
     </section>
@@ -73,7 +76,7 @@
         <div class="jumbotron text-left">
             <h2 style="margin-top: -15px"> Modo de trabajo:</h2>
             <h4>
-                <small class="text-info"> Elige la forma de trabajar que le resulte más comoda.</small>
+                <small class="text-info">Elija la forma de trabajar que le resulte más comoda.</small>
             </h4>
             <ul class="nav nav-stacked">
                 <li>
@@ -107,7 +110,7 @@
                                 <label class="" for="optionOnlySave">
                                     <input type="radio" id="optionOnlySave" class="" name="options" value="2">
                                     <span class="" style="font-size: 15px"><b>Solo guardar</b>
-                                        <small class="text-muted"> - Al hacer click se guardan las pestañas en los marcadores.</small>
+                                        <small class="text-muted"> - Las pestañas se guardan en los marcadores al hacer click.</small>
                                     </span>
                                 </label>
                             </div>
@@ -135,84 +138,42 @@
 
         <!--Atajos de teclado-->
         <div class="jumbotron text-left">
-            <h2 style="margin-top: -15px"> Atajos de teclado:</h2>
+            <h2 style="margin-top: -15px">Sessiones pre-guardadas</h2>
             <h4>
-                <small class="text-info"> Utiliza los atajos de teclado para ser más rápido trabajando.</small>
+                <small class="text-info"> Utiliza las sessiones pre-guardadas para abrirlas comodamente cuando las necesite.</small>
             </h4>
 
-            <ul class="nav nav-stacked">
-                <li>
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-sm-12">
-                                <label>
-                                    <span class="" style="font-size: 15px"><b>Externos:</b></span>
-                                </label>
-                            </div>
+            <form class="form-horizontal">
+                <fieldset>
+                    <div class="form-group">
+                        <div class="col-lg-10">
+                            <label for="inputServiceName" class="control-label">Introduce la pagina web que quieras pre-guardar.</label>
                         </div>
-                        <div class="row">
-                            <div class="col-sm-12">
-                                <label style="margin-left: 23px" class="">
-                                    <span>Activar guardado: <span class="label label-info">Ctrl + Q</span> </span>
-                                </label>
-                            </div>
+                        <div class="col-lg-12">
+                            <input type="text" class="form-control" id="inputPreSavedUrl" placeholder="URL">
                         </div>
                     </div>
-                </li>
-                <li>
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-sm-12">
-                                <label class="">
-                                    <span class="" style="font-size: 15px"><b>Internos:</b></span>
-                                </label>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-sm-12">
-                                <label style="margin-left: 23px" class="">
-                                    <span>Inicio: <span class="label label-info">I</span> </span>
-                                </label>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-sm-12">
-                                <label style="margin-left: 23px" class="">
-                                    <span>Servicios: <span class="label label-info">S</span> </span>
-                                </label>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-sm-12">
-                                <label style="margin-left: 23px" class="">
-                                    <span>Configuración: <span class="label label-info">C</span> </span>
-                                </label>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-sm-12">
-                                <label style="margin-left: 23px" class="">
-                                    <span>Usuario: <span class="label label-info">U</span> </span>
-                                </label>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-sm-12">
-                                <label style="margin-left: 23px" class="">
-                                    <span>Donaciones: <span class="label label-info">D</span> </span>
-                                </label>
-                            </div>
-                        </div>
-                    </div>
-                </li>
+                </fieldset>
+            </form>
 
-                <br>
-            </ul>
+            <a class="btn btn-default" id="saveButtonURL">Guardar</a>
+
+
+            <table class="table table-striped table-hover">
+                <thead>
+                <tr>
+                    <th>URL</th>
+                </tr>
+                </thead>
+                <tbody class="presaved-table-content-generator">
+                </tbody>
+            </table>
+
         </div>
 
         <!--Servicios destacados-->
         <div class="jumbotron text-left">
-            <h2 style="margin-top: -15px"> Servicios destacados:</h2>
+            <h2 style="margin-top: -15px">Destacados:</h2>
             <h4>
                 <small class="text-info"> Añade o elimina servicios que quieras destacar.</small>
             </h4>
@@ -244,7 +205,7 @@
                     <th><i class="material-icons">delete</i></th>
                 </tr>
                 </thead>
-                <tbody class="table-content-generator">
+                <tbody class="service-table-content-generator">
                 </tbody>
             </table>
 
