--- a/App/Donate/donate.html
+++ b/App/Donate/donate.html
@@ -46,7 +46,7 @@
         </div>
         <div class="navbar-collapse collapse" id="navbar-main">
             <ul class="nav navbar-nav navbar-left">
-                <li><a href="../Home/home.html"><i class="material-icons">home</i></a></li>
+                <!--<li><a href="../Home/home.html"><i class="material-icons">home</i></a></li>-->
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <!--<li><a href="../Settings/settings.html"><i class="material-icons settings-icon">settings</i></a></li>-->
