--- a/App/Shortcuts/shortcuts.html
+++ b/App/Shortcuts/shortcuts.html
@@ -49,7 +49,7 @@
         </div>
         <div class="navbar-collapse collapse" id="navbar-main">
             <ul class="nav navbar-nav navbar-left">
-                <li><a href="../Home/home.html"><i class="material-icons">home</i></a></li>
+                <!--<li><a href="../Home/home.html"><i class="material-icons">home</i></a></li>-->
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="../Settings/settings.html"><i class="material-icons settings-icon">settings</i></a></li>
@@ -101,27 +101,6 @@
                             <div class="col-sm-12">
                                 <label class="">
                                     <span class="" style="font-size: 15px"><b>Internos:</b></span>
-                                </label>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-sm-12">
-                                <label style="margin-left: 23px" class="">
-                                    <span>Inicio: <span class="label label-info">I</span> </span>
-                                </label>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-sm-12">
-                                <label style="margin-left: 23px" class="">
-                                    <span>Destacados: <span class="label label-info">D</span> </span>
-                                </label>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-sm-12">
-                                <label style="margin-left: 23px" class="">
-                                    <span>Resumen: <span class="label label-info">L</span> </span>
                                 </label>
                             </div>
                         </div>
