--- a/App/Settings/settings.html
+++ b/App/Settings/settings.html
@@ -46,14 +46,14 @@
 <div class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
         <div class="navbar-header">
-            <a class="navbar-brand">Simple Tab Manager</a>
+            <a class="navbar-brand">Simple Tab Saver</a>
         </div>
         <div class="navbar-collapse collapse" id="navbar-main">
             <ul class="nav navbar-nav navbar-left">
                 <!--<li><a href="../Home/home.html"><i class="material-icons">home</i></a></li>-->
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="../Settings/settings.html"><i class="material-icons settings-icon">settings</i></a></li>
+                <!--<li><a href="../Settings/settings.html"><i class="material-icons settings-icon">settings</i></a></li>-->
             </ul>
         </div>
     </div>
