--- a/App/Shortcuts/shortcuts.html
+++ b/App/Shortcuts/shortcuts.html
@@ -30,13 +30,15 @@
     <script src="../../Resources/js/shortcuts.js"></script>
 
     <!--Custom Scripts-->
-    <script src="../../Background/Provider.js"></script>
+    <script src="../../global-translation.js"></script>
+    <script src="translation.js"></script>
 
     <!--idGenerator-->
     <script src="../../Resources/js/IdGenerator.js"></script>
 
     <!--Lodash-->
     <script src="../../Resources/js/lodash.js"></script>
+
 
 </head>
 
@@ -45,14 +47,14 @@
 <div class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
         <div class="navbar-header">
-            <a class="navbar-brand">Simple Tab Manager</a>
+            <a class="navbar-brand">Simple Tab Saver</a>
         </div>
         <div class="navbar-collapse collapse" id="navbar-main">
             <ul class="nav navbar-nav navbar-left">
                 <!--<li><a href="../Home/home.html"><i class="material-icons">home</i></a></li>-->
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="../Settings/settings.html"><i class="material-icons settings-icon">settings</i></a></li>
+                <!--<li><a href="../Settings/settings.html"><i class="material-icons settings-icon">settings</i></a></li>-->
             </ul>
         </div>
     </div>
@@ -71,9 +73,9 @@
     <section class="col-sm-9 col-md-10 col-lg-10" id="right-content">
         <!--Atajos de teclado-->
         <div class="jumbotron text-left">
-            <h2 style="margin-top: -15px"> Atajos de teclado:</h2>
+            <h2 id="atajosTitol" style="margin-top: -15px"> Atajos de teclado:</h2>
             <h4>
-                <small class="text-info"> Utiliza los atajos de teclado para ser más rápido trabajando.</small>
+                <small id="atajosSubtitol" class="text-info"> Utiliza los atajos de teclado para ser más rápido trabajando.</small>
             </h4>
 
             <ul class="nav nav-stacked">
@@ -82,14 +84,14 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <label>
-                                    <span class="" style="font-size: 15px"><b>Externos:</b></span>
+                                    <span class="" style="font-size: 15px"><b id="atajosEntrada1">Externos:</b></span>
                                 </label>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-sm-12">
                                 <label style="margin-left: 23px" class="">
-                                    <span>Activar guardado: <span class="label label-info">Ctrl + Q</span> </span>
+                                    <span> <l id="atajosSubentrada1_1">Activar guardado: </l> <span class="label label-info">Ctrl + Q</span> </span>
                                 </label>
                             </div>
                         </div>
@@ -100,28 +102,28 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <label class="">
-                                    <span class="" style="font-size: 15px"><b>Internos:</b></span>
+                                    <span class="" style="font-size: 15px"><b id="atajosEntrada2">Internos:</b></span>
                                 </label>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-sm-12">
                                 <label style="margin-left: 23px" class="">
-                                    <span>Configuración: <span class="label label-info">S</span> </span>
+                                    <span> <l id="atajosSubentrada2_1">Configuración: </l> <span class="label label-info">S</span> </span>
                                 </label>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-sm-12">
                                 <label style="margin-left: 23px" class="">
-                                    <span>Atajos: <span class="label label-info">A</span> </span>
+                                    <span><l id="atajosSubentrada2_2">Atajos: </l> <span class="label label-info">A</span> </span>
                                 </label>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-sm-12">
                                 <label style="margin-left: 23px" class="">
-                                    <span>Donaciones: <span class="label label-info">P</span> </span>
+                                    <span><l id="atajosSubentrada2_3">Paypal: </l> <span class="label label-info">P</span> </span>
                                 </label>
                             </div>
                         </div>
