--- a/App/Settings/settings.html
+++ b/App/Settings/settings.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Settings - Simple Tab Manager</title>
-    <meta name="viewport" content="width=device-width initial-scale=0.9" charset="UTF-8">
+    <title>Simple Tab Saver</title>    <meta name="viewport" content="width=device-width initial-scale=0.9" charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="icon" type="image/png" href="../../Resources/Icons/iconBlue.png" sizes="16x16">
 
@@ -64,11 +63,11 @@
 
 <main class="container">
 
-    <section class="col-sm-2 col-md-2 col-lg-2 text-left " id="left-content">
+    <section class="col-sm-3 col-md-2 col-lg-2 text-left " id="left-content">
         <ul class="nav nav-pills nav-stacked">
-            <li class="active"><a href="settings.html">Configuración</a></li>
-            <li class=""><a href="../Shortcuts/shortcuts.html">Atajos</a></li>
-            <li class=""><a href="../Donate/donate.html">PayPal</a></li>
+            <li class="active"><a id="menuConfig" href="../Settings/settings.html">Configuración</a></li>
+            <li class=""><a  id="menuAtajos" href="../Shortcuts/shortcuts.html">Atajos</a></li>
+            <li class=""><a id="menuDonate" href="../Donate/donate.html">PayPal</a></li>
         </ul>
     </section>
 
