--- a/App/Shortcuts/shortcuts.html
+++ b/App/Shortcuts/shortcuts.html
@@ -26,11 +26,11 @@
     <!--Google Analytics-->
     <script src="../../Resources/js/analytics.js"></script>
 
-    <!--Shortcuts-->
-    <script src="../../Resources/js/shortcuts.js"></script>
+    <!--Global Shortcuts-->
+    <script src="../../Resources/js/global-shortcuts.js"></script>
 
     <!--Custom Scripts-->
-    <script src="../../global-translation.js"></script>
+    <script src="../global-translation.js"></script>
     <script src="translation.js"></script>
 
     <!--idGenerator-->
@@ -73,7 +73,7 @@
     <section class="col-sm-9 col-md-10 col-lg-10" id="right-content">
         <!--Atajos de teclado-->
         <div class="jumbotron text-left">
-            <h2 id="atajosTitol" style="margin-top: -15px"> Atajos de teclado:</h2>
+            <h2 id="atajosTitol" style="margin-top: -15px"> Atajos de teclado</h2>
             <h4>
                 <small id="atajosSubtitol" class="text-info"> Utiliza los atajos de teclado para ser más rápido trabajando.</small>
             </h4>
@@ -84,14 +84,14 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <label>
-                                    <span class="" style="font-size: 15px"><b id="atajosEntrada1">Externos:</b></span>
+                                    <span class="" style="font-size: 15px"><b id="atajosEntrada1">Externos</b><l>:</l></span>
                                 </label>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-sm-12">
                                 <label style="margin-left: 23px" class="">
-                                    <span> <l id="atajosSubentrada1_1">Activar guardado: </l> <span class="label label-info">Ctrl + Q</span> </span>
+                                    <span> <l id="atajosSubentrada1_1">Activar guardado</l><l>:</l> <span class="label label-info">Ctrl + U</span> </span>
                                 </label>
                             </div>
                         </div>
@@ -102,28 +102,28 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <label class="">
-                                    <span class="" style="font-size: 15px"><b id="atajosEntrada2">Internos:</b></span>
+                                    <span class="" style="font-size: 15px"><b id="atajosEntrada2">Internos</b><l>:</l></span>
                                 </label>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-sm-12">
                                 <label style="margin-left: 23px" class="">
-                                    <span> <l id="atajosSubentrada2_1">Configuración: </l> <span class="label label-info">S</span> </span>
+                                    <span> <l id="atajosSubentrada2_1">Configuración</l><l>:</l> <span class="label label-info">S</span> </span>
                                 </label>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-sm-12">
                                 <label style="margin-left: 23px" class="">
-                                    <span><l id="atajosSubentrada2_2">Atajos: </l> <span class="label label-info">A</span> </span>
+                                    <span><l id="atajosSubentrada2_2">Atajos</l><l>:</l> <span class="label label-info">A</span> </span>
                                 </label>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-sm-12">
                                 <label style="margin-left: 23px" class="">
-                                    <span><l id="atajosSubentrada2_3">Paypal: </l> <span class="label label-info">P</span> </span>
+                                    <span><l id="atajosSubentrada2_3">Paypal</l><l>:</l> <span class="label label-info">P</span> </span>
                                 </label>
                             </div>
                         </div>
