--- a/App/Shortcuts/shortcuts.html
+++ b/App/Shortcuts/shortcuts.html
@@ -1,3 +1,5 @@
+<!--Copyright (C) 2016-2019, Roger Pedrós Villorbina, All rights reserved.-->
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -13,7 +15,7 @@
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue_grey-red.min.css"/>
 
     <!--JQUERY-->
-    <script src="../../Resources/js/jquery-3.2.1.min.js"></script>
+    <script src="../../Resources/js/jquery-3.4.1.min.js"></script>
     <script src="../../Resources/js/tether.min.js"></script>
 
     <!--BOOTSTRAP-->
