--- a/App/More/more.html
+++ b/App/More/more.html
@@ -1,12 +1,14 @@
+<!--Copyright (C) 2016-2019, Roger Pedrós Villorbina, All rights reserved.-->
+
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Simple Tab Saver</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="icon" type="image/png" href="../../Resources/Icons/iconBlue.png" sizes="16x16">
+   <title>Simple Tab Saver</title>
+   <meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <link rel="icon" type="image/png" href="../../Resources/Icons/iconBlue.png" sizes="16x16">
 
-    <!--MDL-->
+   <!--MDL-->
     <link rel="stylesheet" href="../../Resources/Style/Material/material.min.css">
     <script src="../../Resources/Style/Material/material.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -17,7 +19,7 @@
     <link rel="stylesheet" href="../../Resources/Style/Bootstrap/simplex.bootstrap.min.css">
 
     <!--JQUERY-->
-    <script src="../../Resources/js/jquery-3.2.1.min.js"></script>
+    <script src="../../Resources/js/jquery-3.4.1.min.js"></script>
     <script src="../../Resources/js/tether.min.js"></script>
 
     <!--Custom Style-->
