--- a/App/Settings/settings.html
+++ b/App/Settings/settings.html
@@ -1,7 +1,10 @@
+<!--Copyright (C) 2016-2019, Roger Pedrós Villorbina, All rights reserved.-->
+
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Simple Tab Saver</title>    <meta name="viewport" content="width=device-width initial-scale=0.9" charset="UTF-8">
+    <title>Simple Tab Saver</title>
+    <meta name="viewport" content="width=device-width initial-scale=0.9" charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="icon" type="image/png" href="../../Resources/Icons/iconBlue.png" sizes="16x16">
 
@@ -12,7 +15,7 @@
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue_grey-red.min.css"/>
 
     <!--JQUERY-->
-    <script src="../../Resources/js/jquery-3.2.1.min.js"></script>
+    <script src="../../Resources/js/jquery-3.4.1.min.js"></script>
     <script src="../../Resources/js/tether.min.js"></script>
 
     <!--BOOTSTRAP-->
@@ -54,7 +57,7 @@
         <ul class="nav nav-pills flex-column">
             <li class="nav-item"><a id="menuHistorial" href="../History/history.html">Historial</a></li>
             <li class="nav-item active"><a id="menuConfig" href="../Settings/settings.html">Configuración</a></li>
-            <li class="nav-item"><a  id="menuAtajos" href="../Shortcuts/shortcuts.html">Atajos</a></li>
+            <li class="nav-item"><a id="menuAtajos" href="../Shortcuts/shortcuts.html">Atajos</a></li>
             <li class="nav-item"><a id="menuDonate" href="../More/more.html">Más</a></li>
         </ul>
     </section>
@@ -64,7 +67,8 @@
         <div class="jumbotron text-left">
             <h2 id="configTitol" style="margin-top: -15px"> Modo de trabajo:</h2>
             <h4>
-                <small id="configSubtitol" class="text-info">Elija la forma de trabajar que le resulte más comoda.</small>
+                <small id="configSubtitol" class="text-info">Elija la forma de trabajar que le resulte más comoda.
+                </small>
             </h4>
             <ul class="nav nav-stacked">
                 <li>
@@ -74,7 +78,8 @@
                                 <label class="" for="optionSimple">
                                     <input type="radio" id="optionSimple" class="" name="options" value="1">
                                     <span class="" style="font-size: 15px"><b id="configSimple">Simple</b>
-                                        <small> - <l id="configSimplemsg">Guarda y recupera las pestañas al hacer click.</l></small>
+                                        <small> - <l
+                                                id="configSimplemsg">Guarda y recupera las pestañas al hacer click.</l></small>
                                     </span>
                                 </label>
                             </div>
@@ -108,7 +113,8 @@
                             <div class="col-sm-12">
                                 <label style="margin-left: 23px" class="" for="checkboxOnlySave">
                                     <input type="checkbox" id="checkboxOnlySave" class="">
-                                    <span class=""><small> <l id="configSubOnlysave">Cerrar pestañas al guardar. </l></small></span>
+                                    <span class=""><small> <l
+                                            id="configSubOnlysave">Cerrar pestañas al guardar. </l></small></span>
                                 </label>
                             </div>
                         </div>
@@ -116,11 +122,11 @@
                 </li>
 
             </ul>
-<!--            <h4>-->
-<!--            <small class="text-danger"> Recuerda que siempre puedes cambiar el modo de forma rapida haciendo click-->
-<!--            con el boton derecho.-->
-<!--            </small>-->
-<!--            </h4>-->
+            <!--            <h4>-->
+            <!--            <small class="text-danger"> Recuerda que siempre puedes cambiar el modo de forma rapida haciendo click-->
+            <!--            con el boton derecho.-->
+            <!--            </small>-->
+            <!--            </h4>-->
         </div>
 
         <!--PRIVACY-->
@@ -134,12 +140,18 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-sm-12">
-                                <label class="" for="optionSimple">
+                                <label class="" for="optionNoSync">
                                     <input type="checkbox" id="optionNoSync" class="" name="options" value="1">
                                     <span class="" style="font-size: 15px"><b id="configNoSync">Almacenamiento local</b>
                                         <small> - <l id="configNoSyncText">Deshabilita la sincronización de sus pestañas entre dispositivos</l></small>
                                     </span>
-                                </label>
+
+                                    <label class="" for="optionIngonitoMatters">
+                                        <input type="checkbox" id="optionIngonitoMatters" class="" name="options" value="1">
+                                        <span class="" style="font-size: 15px"><b id="ingonitoMatters">Respetar el incognito</b>
+                                        <small> - <l id="ingonitoMattersText">Las sessiones que guardes en ingonito no se guardaran en el historial.</l></small>
+                                    </span>
+                                    </label>
                             </div>
                         </div>
                     </div>
