--- a/App/Settings/settings.html
+++ b/App/Settings/settings.html
@@ -34,12 +34,12 @@
 
     <!--Custom Scripts-->
     <script src="settings-workflow.js"></script>
-    <script src="../../Background/Provider.js"></script>
+    <script src="../../Background/Provider/Provider.js"></script>
     <script src="../../Resources/js/global-translation.js"></script>
     <script src="translation.js"></script>
 
     <!--Lodash-->
-    <script src="../../Resources/js/lodash.js"></script>
+    <script src="../../Resources/js/lodash.min.js"></script>
 
 </head>
 
@@ -140,18 +140,20 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-sm-12">
-                                <label class="" for="optionNoSync">
-                                    <input type="checkbox" id="optionNoSync" class="" name="options" value="1">
-                                    <span class="" style="font-size: 15px"><b id="configNoSync">Almacenamiento local</b>
-                                        <small> - <l id="configNoSyncText">Deshabilita la sincronización de sus pestañas entre dispositivos</l></small>
+                                <label class="invisible" for="checkboxLocalStorage">
+                                    <input type="checkbox" id="checkboxLocalStorage" class="" name="options" value="1">
+                                    <span class="" style="font-size: 15px"><b id="configLocalStorage">Almacenamiento local</b>
+                                        <small> - <l id="configLocalStorageText">Sus pestañas y sessiones se guardarán de forma local. Solo se sincronizará entre ordenadores su configuración. </l></small>
                                     </span>
+                                </label>
 
-                                    <label class="" for="optionIngonitoMatters">
+
+                                <label class="" for="optionIngonitoMatters">
                                         <input type="checkbox" id="optionIngonitoMatters" class="" name="options" value="1">
                                         <span class="" style="font-size: 15px"><b id="ingonitoMatters">Respetar el incognito</b>
                                         <small> - <l id="ingonitoMattersText">Las sessiones que guardes en ingonito no se guardaran en el historial.</l></small>
                                     </span>
-                                    </label>
+                                </label>
                             </div>
                         </div>
                     </div>
