--- a/App/Shortcuts/shortcuts.html
+++ b/App/Shortcuts/shortcuts.html
@@ -37,7 +37,7 @@
     <script src="translation.js"></script>
 
     <!--Lodash-->
-    <script src="../../Resources/js/lodash.js"></script>
+    <script src="../../Resources/js/lodash.min.js"></script>
 
 
 </head>
